--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -3,3 +3,115 @@ body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color: #00B7FF
+
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:700')
+#cssmenu
+  background #f96e5b
+  width auto
+  ul
+    list-style none
+    margin 0
+    padding 0
+    line-height 1
+    display block
+    zoom 1
+    &:after
+      content " "
+      display block
+      font-size 0
+      height 0
+      clear both
+      visibility hidden
+    li
+      display inline-block
+      padding 0
+      margin 0
+      a
+        color #ffffff
+        text-decoration none
+        display block
+        padding 15px 25px
+        font-family 'Open Sans', sans-serif
+        font-weight 700
+        text-transform uppercase
+        font-size 14px
+        position relative
+        -webkit-transition color .25s
+        -moz-transition color .25s
+        -ms-transition color .25s
+        -o-transition color .25s
+        transition color .25s
+        &:hover
+          color #333333
+          &:before
+            width 100%
+        &:after
+          content ""
+          display block
+          position absolute
+          right -3px
+          top 19px
+          height 6px
+          width 6px
+          background #ffffff
+          opacity .5
+        &:before
+          content ""
+          display block
+          position absolute
+          left 0
+          bottom 0
+          height 3px
+          width 0
+          background #333333
+          -webkit-transition width .25s
+          -moz-transition width .25s
+          -ms-transition width .25s
+          -o-transition width .25s
+          transition width .25s
+      &.active
+        a
+          color #333333
+          &:before
+            width 100%
+  &.align-right
+    ul
+      li
+        float right
+    li
+      &:first-child
+        a
+          &:after
+            display none
+  &.align-center
+    ul
+      text-align center
+
+#cssmenu ul li.last > a:after,
+#cssmenu ul li:last-child > a:after
+  display none
+
+#cssmenu.align-right li.last > a:after,
+#cssmenu.align-right li:last-child > a:after
+  display block
+
+@media screen and (max-width: 768px)
+  #cssmenu
+    ul
+      li
+        float none
+        display block
+        a
+          width 100%
+          -moz-box-sizing border-box
+          -webkit-box-sizing border-box
+          box-sizing border-box
+          border-bottom 1px solid #fb998c
+          &:after
+            display none
+          &:before
+            display none
+
+  #cssmenu ul li.last > a,
+    #cssmenu ul li:last-child > a
+    border 0
