--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,8 +1,12 @@
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  background: url("../images/swirl.png")
 a
   color: #00B7FF
+
+.content
+  padding-left 24px
 
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:700')
 #cssmenu
