--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,13 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: url("../images/swirl.png");
 }
 a {
   color: #00b7ff;
+}
+.content {
+  padding-left: 24px;
 }
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:700");
 #cssmenu {
